[tool.poetry]
name = "test_python_semple_service"
version = "0.1.0"
description = ""
authors = ["dimanah10 <dimanah10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
alembic="^1.7.1"
python = "^3.10"
Flask = "^1.0.4"
markupsafe = "2.0.1"
requests = "2.28.1"
hypothesis = "6.68.2"
sqlalchemy = "^2.0.0"
python-dotenv = ">=0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-dotenv-plugin = "poetry_dotenv_plugin.dotenv_plugin:DotenvPlugin"